syntax = "proto3";

import "google/protobuf/any.proto";

option go_package = "orznewbie.com/gotest/proto;example";

// protoc -I . -I ./third_party --go_out=paths=source_relative:. proto/example.proto
message TestAny {
  uint64 Id = 1;
  string Title = 2;
  string Content = 3;
}

message AnyResponse {
  uint32 Code = 1;
  string Msg = 2;
  google.protobuf.Any data = 3;
}

message Correct {
  uint64 rank = 1;
}

message Wrong {
  uint64 code = 1;
  string msg = 2;
}

message OneofResponse {
  oneof result {
    Correct correct = 1;
    Wrong wrong = 2;
  }
}